# orderbook-aggregator

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  demo.tape  docker-compose.yml
.github/workflows/: ci.yml
benches/: hot_path.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  MONITORING.md  TESTING.md  TRADEOFFS.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: orderbook.json
proto/: orderbook.proto
src/: atomic_slot.rs  client.rs  config.rs  error.rs  json_walker.rs  lib.rs  main.rs  merger.rs  metrics.rs  server.rs  testutil.rs  types.rs
src/exchange/: binance.rs  bitstamp.rs  mod.rs
tests/: integration.rs
