[package]
name = "orderbook-aggregator"
version = "0.1.0"
edition = "2024"
description = "Real-time order book aggregator: merges Binance + Bitstamp depth and streams top-10 levels via gRPC"

[lib]
name = "orderbook_aggregator"
path = "src/lib.rs"

[[bin]]
name = "orderbook-aggregator"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
rand = "0.9"
axum = "0.7"
arrayvec = "0.7"
memchr = "2"
rtrb = "0.3"
core_affinity = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[features]
codegen = ["dep:tonic-build"]

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Acceptable for this codebase:
missing_errors_doc    = "allow" # internal crate, not a public API
missing_panics_doc    = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow" # Duration::as_nanos() → u64: max ~584 years
cast_precision_loss    = "allow" # nanos u64 → f64: acceptable for display
ignored_unit_patterns  = "allow" # `_ = cancel.cancelled()` is idiomatic tokio::select!
too_many_lines         = "allow" # exchange adapters are inherently long (reconnect loops)

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_path"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
